[package]
name = "mitm-cache"
version = "0.1.2"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
cap-std = "4.0.2"
clap = { version = "4.4.11", features = ["derive"] }
futures-util = "0.3.30"
http-body-util = "0.1.2"
hudsucker = "0.24.0"
hyper = { version = "1.3.1", features = ["client"] }
hyper-rustls = "0.27.9"
hyper-util = { version = "0.1.5", features = ["client", "http1", "http2", "tokio", "client-legacy"] }
regex = "1.10.2"
rustls-pemfile = "2.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.11.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
